syntax = "proto3";

package user;

option java_package = "com.e_project.user_service.grpc";
option java_outer_classname = "UserProto";

// User message definition
message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  string address = 6;
  string role = 7;
}

// Request messages
message GetUserByIdRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
  string address = 5;
  string role = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string phone = 5;
  string address = 6;
  string role = 7;
}

message DeleteUserRequest {
  int64 id = 1;
}

message GetAllUsersRequest {
  // Empty request for getting all users
}

// Response messages
message UserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message UsersResponse {
  repeated User users = 1;
  bool success = 2;
  string message = 3;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// User Service Definition
service UserService {
  rpc GetAllUsers(GetAllUsersRequest) returns (UsersResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}